@@ -212,6 +212,8 @@
 			<label index="fe_groups.tx_seminars_events_pid">Store events created in the FE-editor in this page:</label>
 			<label index="fe_groups.tx_seminars_default_categories">Default categories:</label>
 			<label index="owner_feuser">Front-end user who has created this record:</label>
+			<label index="be_groups.tab_event_management">Event management</label>
+			<label index="be_groups.tx_seminars_events_folder">Sysfolder for new events</label>
 		</languageKey>
 		<languageKey index="de" type="array">
 			<label index="moduleFunction.tx_seminars_modfunc1">Seminare</label>
@@ -417,6 +419,8 @@
 			<label index="fe_groups.tx_seminars_events_pid">Speichere im FE-Editor erstellte Veranstaltungen in Seite:</label>
 			<label index="fe_groups.tx_seminars_default_categories">Default-Kategorien:</label>
 			<label index="owner_feuser">Frontend-User, der diesen Datensatz eingetragen hat:</label>
+			<label index="be_groups.tab_event_management">Veranstaltungsverwaltung</label>
+			<label index="be_groups.tx_seminars_events_folder">SysFolder für neue Veranstaltungen</label>
 		</languageKey>
 		<languageKey index="nl" type="array">
 			<label index="moduleFunction.tx_seminars_modfunc1">Seminars</label>
@@ -1377,6 +1381,8 @@
 			<label index="fe_groups.tx_seminars_events_pid" type="integer">197101199</label>
 			<label index="fe_groups.tx_seminars_default_categories" type="integer">208530763</label>
 			<label index="owner_feuser" type="integer">36410852</label>
+			<label index="be_groups.tab_event_management" type="integer">136062963</label>
+			<label index="be_groups.tx_seminars_events_folder" type="integer">177662722</label>
 		</languageKey>
 		<languageKey index="nl" type="array">
 			<label index="moduleFunction.tx_seminars_modfunc1" type="integer">146176001</label>
@@ -2338,6 +2344,8 @@
 			<label index="fe_groups.tx_seminars_events_pid">Store events created in the FE-editor in this page:</label>
 			<label index="fe_groups.tx_seminars_default_categories">Default categories:</label>
 			<label index="owner_feuser">Front-end user who has created this record:</label>
+			<label index="be_groups.tab_event_management">Event management</label>
+			<label index="be_groups.tx_seminars_events_folder">Sysfolder for new events</label>
 		</languageKey>
 		<languageKey index="dk" type="array">
 			<label index="moduleFunction.tx_seminars_modfunc1">Seminars</label>
